--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sixtyfour&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="prefetch" as="image" href="/images/fav.png" />
+    <link rel="prefetch" as="image" href="/images/hero-bg-cropped-min.png" />
+    <link rel="preload" as="image" href="/images/fav.png" />
+    <link rel="preload" as="image" href="/images/hero-bg-cropped-min.png" />
   </head>
   <body>
     <div id="root"></div>
